# obj-to-bsp

./: .gitignore  .gitmodules  :w  CMakeLists.txt  README.md
include/: covar.h  dynamic_arr.h  log.h  obj.h  utils.h
include/bsp_tree/: node.h  tree.h
src/: covar.c  dynamic_arr.c  main.c  obj.c  utils.c
src/bsp_tree/: tree.c
